...
    "hud.pause": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Pause"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Duraklat"
...
            "state": "translated",
            "value": "DEVAM ET"
          }
        }
      }
    },
    "menu.daily": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Daily Level"
...
            "state": "translated",
            "value": "Başarımları görmek için Ayarlar'dan Game Center'a giriş yap."
          }
        }
      }
    },
    "menu.levels": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Levels"
...
            "state": "translated",
            "value": "Bölüm bulunamadı"
          }
        }
      }
    },
    "menu.settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Ayarlar"
...
